--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "start": "nodemon -e js,json,graphql"
   },
   "dependencies": {
-    "apollo-server": "^2.16.1",
+    "apollo-server-express": "^2.16.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "graphql": "^15.3.0",
+    "graphql-playground-middleware-express": "^1.7.18",
+    "mongodb": "^3.6.0",
     "nodemon": "^2.0.4"
   }
 }
